# control-path

./: .diff-coverage-ignore.json  .eslintrc.json  .gitignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  LICENSE  LICENSE-LAYER1.md  README.md  SECURITY.md  commitlint.config.cjs  flags.definitions.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  turbo.json
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/workflows/: auto-merge-validation.yml  commitlint.yml  main-ci.yml  post-merge-e2e.yml  release-cli.yml  release-please.yml
.husky/: commit-msg  pre-commit  pre-push
actions/controlpath-action/: README.md  action.yml  index.js
actions/controlpath-compile-action/: README.md  action.yml  index.js  package-lock.json  package.json
crates/cli/: COVERAGE_SETUP.md  Cargo.toml  TESTING.md  build.rs
crates/cli/.controlpath/: config.yaml  production.deployment.yaml
crates/cli/.github/workflows/: coverage.yml
crates/cli/src/: error.rs  main.rs  test_helpers.rs
crates/cli/src/commands/: ci.rs  compile.rs  completion.rs  debug.rs  debug_ui.html  dev.rs  env.rs  explain.rs  flag.rs  generate_sdk.rs  init.rs  mod.rs  override.rs  services.rs  setup.rs  validate.rs  watch.rs  workflow.rs
crates/cli/src/generator/: mod.rs  tests.rs  typescript.rs
crates/cli/src/generator/templates/: index.ts.tera  types.ts.tera
crates/cli/src/monorepo/: detection.rs  mod.rs  paths.rs  service.rs
crates/cli/src/ops/: compile.rs  generate_sdk.rs  mod.rs
crates/cli/src/utils/: config.rs  environment.rs  language.rs  mod.rs  unified_config.rs
crates/cli/tests/: README.md  integration_commands.rs  integration_debug_ui.rs  integration_error_cases.rs  integration_test_helpers.rs  integration_watch.rs  integration_workflows.rs
crates/compiler/: Cargo.toml
crates/compiler/benches/: compilation.rs
crates/compiler/src/: ast.rs  error.rs  lib.rs  schemas.rs
crates/compiler/src/compiler/: expressions.rs  mod.rs  string_table.rs  tests.rs
crates/compiler/src/parser/: definitions.rs  deployment.rs  error.rs  mod.rs  unified.rs  utils.rs
crates/compiler/src/validator/: common.rs  constants.rs  definitions.rs  deployment.rs  error.rs  mod.rs  tests.rs  type_guards.rs  unified.rs
docs/: cli-usage-examples.md  cli-usage.md  migration-typescript-to-rust.md  override-cli-usage.md  override-examples.md  override-sdk-config.md  override-setup.md  rust-api.md  rust-cli.md  wasm-wrapper-guide.md
runtime/typescript/: .eslintrc.json  README.md  package-lock.json  package.json  pnpm-lock.yaml  typescript  vitest.config.ts
runtime/typescript/src/: ast-loader.test.ts  ast-loader.ts  evaluator.test.ts  evaluator.ts  index.ts  integration.test.ts  openfeature-compatibility.test.ts  override-loader.test.ts  override-loader.ts  performance.test.ts  provider.test.ts  provider.ts  types.test.ts  types.ts  utils.test.ts  utils.ts
schemas/: control-path.schema.v1.json  flag-definitions.schema.v1.json  flag-deployment.schema.v1.json  override-file.schema.v1.json
scripts/: enforce-diff-coverage.js  ensure-pnpm.js  run-e2e-debug.sh  setup-e2e-ruleset.sh  setup-git-aliases.sh  setup-git-hooks.sh  smoke-test.js  tia-runner.js
tests/comparison/: README.md  cli-comparison.test.ts  compiler-comparison.test.ts  package.json  performance.test.ts  test-helpers.ts  tsconfig.json  vitest.config.ts
tests/e2e/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/e2e/src/: sdk-generator.e2e.test.ts
