[package]
name = "controlpath-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Control Path CLI - command-line tool for compiling and validating flag definitions"
rust-version = "1.70"

[[bin]]
name = "controlpath"
path = "src/main.rs"

[dependencies]
controlpath-compiler = { path = "../compiler" }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
notify = "6.1"
rmp-serde = "1.1"
regex = "1.10"
semver = "1.0"
chrono = "0.4"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
atty = "0.2"
dialoguer = "0.11"
strsim = "0.11"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

