[package]
name = "controlpath-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Control Path compiler library - compiles deployment YAML to AST artifacts"
rust-version = "1.70"

[lib]
name = "controlpath_compiler"
crate-type = ["lib", "cdylib"]

[dependencies]
# Core serialization (WASM-compatible)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"  # For proper binary serialization in MessagePack

# YAML parsing - using yaml-rust for WASM compatibility
# serde_yaml may not be fully WASM-compatible, so using yaml-rust as fallback
yaml-rust = "0.4"

# MessagePack (WASM-compatible)
rmp-serde = "1.1"

# JSON Schema validation (WASM-compatible)
# NOTE: jsonschema has a transitive dependency on getrandom which needs WASM configuration
# For WASM targets, getrandom will use the "js" feature automatically via target-specific deps
jsonschema = "0.17"

# Error handling (WASM-compatible)
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compilation"
harness = false

# Configure getrandom for WASM targets
# Note: This is a known limitation - getrandom needs manual configuration for WASM
# For now, we'll document this and test native compilation
# WASM compilation may require additional configuration in the WASM wrapper crate
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

